[package]
name = "rspotd"
version = "0.1.4"
edition = "2021"
description = "Generate ARRIS/CommScope Password of the Day for modems"
homepage = "https://github.com/MxLinux/rspotd"
license = "MIT OR Apache-2.0"
keywords = ["arris", "commscope", "modem", "docsis", "potd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
regex = "1"
