[package]
name = "rspotd"
version = "0.3.0"
edition = "2021"
description = "Generate ARRIS/CommScope Password of the Day for modems"
homepage = "https://github.com/SnailShea/rspotd"
license = "MIT OR Apache-2.0"
keywords = ["arris", "commscope", "modem", "docsis", "potd"]

[dependencies]
block-modes = "0.8.1"
block-padding = "0.2.1"
chrono = "0.4"
des = "0.7.0"
regex = "1"
